room增加URL参数；完成前台系统的前端设计

--- a/交互规范.md
+++ b/交互规范.md
@@ -1,7 +1,7 @@
 Websocket : `localhost:10043`
 
 ### 房间有关：
-路由：`ws://127.0.0.1:10043/ws/room`
+路由：`ws://127.0.0.1:10043/ws/room?roomId=100`
 
 房间开关机、修改风速等，发起的新请求：
 ```json
