酒店经理与管理员前端页面（基础功能部分）

--- a/交互规范.md
+++ b/交互规范.md
@@ -165,6 +165,7 @@ status `ERR` 说明无空闲房间可以分配
 服务器回复：
 ```json
 {
+    "roomId": "101",
     "status": "running",
     "speed": "medium",
     "bill": 114514.19,
