room消息增加pause，前端修复房间卡片按钮使用事件BUG

--- a/交互规范.md
+++ b/交互规范.md
@@ -15,7 +15,7 @@ Websocket : `localhost:10043`
     "new_request": 1
 }
 ```
-state `"on"` `"off"`  
+state `"on"` `"off"` `"pause"`  
 speed `0` `1` `2` 分别对应小中大风  
 mode `"heat"` `"cool"`  
 new_request `0` `1` 分别对应这是否是一次新的请求
@@ -27,8 +27,10 @@ new_request `0` `1` 分别对应这是否是一次新的请求
     "bill": 114514.19
 }
 ```
-`"on"` `"off"`
+state `"on"` `"off"` `"pause"`  
 请求成功可回复可不回复，请求失败回复`"off"`  
+`"pause"`状态是因为本地判断温度达到设定，向服务器发送，后端处理等同于关机  
+区别在于，`"pause"`状态下本地在温差达到一度后重新启动，但是`"off"`的返回会误以为被后端关机，从而不会重新启动
 
 在被抢占或者抢占结束恢复时，服务器主动发送`"off"`或者`"on"`  
 金额本地和服务器都会计算，通过该消息同步（以服务器为准）。也可不改变状态直接发送该消息同步金额
